end of night backup

--- a/Johnny Wallet/www/wallet.html
+++ b/Johnny Wallet/www/wallet.html
@@ -100,7 +100,9 @@
 	
 	        <!-- Right Sidebar -->
 	<div class="snap-drawer snap-drawer-right">
-	
+				<ul class="sidebar-navigation">
+					<li><a href="myaddress.html"><i class="fa fa-barcode"></i>My Address<i class="fa fa-circle"></i></a></li>
+					<li><a href="invite.html"><i class="fa fa-user-plus"></i>Share Johnny Wallet<i class="fa fa-circle"></i></a></li>
 	</div>
 	        <!-- End Right Sidebar -->
     
@@ -108,10 +110,15 @@
     <div id="content" class="snap-content">
         <div class="header">
             <a href="index.html" class="header-logo"></a>
+
             <a href="#" class="open-menu"><i class="fa fa-navicon"></i></a>
-			<a href="#" class="open-more"><i class="fa fa-envelope-o"></i></a>
+			<a href="#" class="open-more"><i class="fa fa-ellipsis-v"></i></a>
         </div>
-           
+			<div class="header">
+			<a href="#" class="header-text" color="FFFFFF"><i class="fa fa-btc">2.0003<br><br><i class="fa fa-usd">556.12</i></i></a>
+			<a href="#" class="qr-btn"><i class="fa fa-qrcode"></i></a>
+			</div>
+
     </div>   
 </div>
 
