--- a/Johnny Wallet/www/invite.html
+++ b/Johnny Wallet/www/invite.html
@@ -101,7 +101,7 @@
 	        <!-- Right Sidebar -->
 	<div class="snap-drawer snap-drawer-right">
 				<ul class="sidebar-navigation">
-					<li><a href="#" id="encode"><i class="fa fa-barcode"></i>My Address<i class="fa fa-circle"></i></a></li>
+					<li><a href="myaddress.html"><i class="fa fa-barcode"></i>My Address<i class="fa fa-circle"></i></a></li>
 					<li><a href="invite.html"><i class="fa fa-user-plus"></i>Share Johnny Wallet<i class="fa fa-circle"></i></a></li>
 	</div>
 	        <!-- End Right Sidebar -->
@@ -116,7 +116,7 @@
         </div>
 			<div class="header">
 			<a href="#" class="header-text" color="FFFFFF"><i class="fa fa-btc">2.0003<br><br><i class="fa fa-usd">556.12</i></i></a>
-			<a href="#" class="qr-btn" id="scan"><i class="fa fa-qrcode"></i></a>
+			<a href="#" class="qr-btn"><i class="fa fa-qrcode"></i></a>
 			</div>
 
     </div>   
