--- a/Johnny Wallet/www/wallet.html
+++ b/Johnny Wallet/www/wallet.html
@@ -106,7 +106,7 @@
 	</div>
 	        <!-- End Right Sidebar -->
     
-    <!-- Page Content-->
+
     <div id="content" class="snap-content">
         <div class="header">
             <a href="index.html" class="header-logo"></a>
@@ -118,7 +118,11 @@
 			<a href="#" class="header-text" color="FFFFFF"><i class="fa fa-btc">2.0003<br><br><i class="fa fa-usd">556.12</i></i></a>
 			<a href="#" class="qr-btn" id="scan"><i class="fa fa-qrcode"></i></a>
 			</div>
-
+			
+			<!-- Page Content-->
+		<div class="content">
+				WORDS!dfgsdfgsd
+        </div>
     </div>   
 </div>
 
