--- a/Johnny Wallet/www/wallet.html
+++ b/Johnny Wallet/www/wallet.html
@@ -120,8 +120,26 @@
 			</div>
 			
 			<!-- Page Content-->
-		<div class="content">
-				WORDS!dfgsdfgsd
+
+				
+			<div class="content">       
+				<div class="container large-title no-bottom">
+					 <div class="app">
+								<h1>Johnny Wallet Scan Test</h1>
+								<p><a href="#" class="topcoat-button" id="scan">SCAN</a></p>
+								<p><a href="#" class="topcoat-button" id="encode">ENCODE</a></p>
+								<p id="info"></p>
+								
+							</div>
+							<script type="text/javascript" src="cordova.js"></script>
+							<script type="text/javascript" src="barcodescanner.js"></script>
+							<script type="text/javascript" src="js/index.js"></script>
+							<script type="text/javascript">
+								app.initialize();
+							</script>
+					</div>
+			<div class="decoration"></div>
+        </div> 
         </div>
     </div>   
 </div>
