post weekend backup

--- a/johnnywallet/www/index.html
+++ b/johnnywallet/www/index.html
@@ -36,6 +36,13 @@
     <!-- Firebase JS Files -->
     <script src="js/Firebase/services.js"></script>
     <script src="js/Firebase/controllers.js"></script>
+	<!--bitcoin charting and history -->
+	<script src="js/bitcoin/detail.js"></script>
+    <script src="js/bitcoin/currencies.js"></script>
+    <script src="js/bitcoin/history.js"></script>
+    <script src="js/bitcoin/rates.js"></script>
+    <!-- Controller & Services for Features Demo -->
+    <script src="js/FeaturesDemo/controllers.js"></script>
 </head>
 
 <body ng-app="johnnywallet">
