--- a/johnnywallet/www/index.html
+++ b/johnnywallet/www/index.html
@@ -11,46 +11,14 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <!-- Firebase -->
-    <script src="lib/firebase/firebase.js"></script>
-    <!-- AngularFire -->
-    <script src="lib/angularfire/dist/angularfire.min.js"></script>
 
-    <!-- ngCordova -->
-    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-
-    <!-- Elastic -->
-    <script src="lib/angular-elastic/elastic.js"></script>    
-
-    <!-- Moment & Angular Moment -->
-    <script src="lib/moment/moment.js"></script>
-    <script src="lib/angular-moment/angular-moment.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/common/services.js"></script>
-    <!-- Firebase JS Files -->
-    <script src="js/Firebase/services.js"></script>
-    <script src="js/Firebase/controllers.js"></script>
-	<!--bitcoin charting and history -->
-	<script src="js/bitcoin/detail.js"></script>
-    <script src="js/bitcoin/currencies.js"></script>
-    <script src="js/bitcoin/history.js"></script>
-    <script src="js/bitcoin/rates.js"></script>
-    <!-- Controller & Services for Features Demo -->
-    <script src="js/FeaturesDemo/controllers.js"></script>
+	
+	<script src="js/jquery/jquery-2.1.1.min.js"></script>
+<script src="js/plugins/jquery-ui/jquery-ui.js"></script>
 </head>
 
 <body ng-app="johnnywallet">
-    <ion-nav-bar class="bar-stable">
-        <ion-nav-back-button>
-        </ion-nav-back-button>
-    </ion-nav-bar>
-    <ion-nav-view></ion-nav-view>
+ 
 </body>
 
 </html>
