--- a/johnnywallet/www/index.html
+++ b/johnnywallet/www/index.html
@@ -14,11 +14,37 @@
 
 	
 	<script src="js/jquery/jquery-2.1.1.min.js"></script>
-<script src="js/plugins/jquery-ui/jquery-ui.js"></script>
+
+<script src="js/bootstrap/bootstrap.min.js"></script>
 </head>
 
 <body ng-app="johnnywallet">
- 
+ 			<div>
+<center><b>Bikes or Cars</b></center>
+<center><input onclick="connect(this.value)" type="button" value="cars" /></center>
+<center><input onclick="connect(this.value)" type="button" value="bikes" /></center>
+<center><b>Results</b></center>
+<ul id="result"></ul>
+	</div>
 </body>
-
+<script charset="utf&minus;8" type="text/javascript">
+function connect(e)
+{
+var term= {button:e};
+$.ajax({
+url:'http://www.johnnywallet.com/api/phone/test.php',
+type:'POST',
+data:term,
+dataType:'jsonp',
+error:function(jqXHR,text_status,strError){
+alert("no connection");},
+timeout:60000,
+success:function(data){
+$("#result").html("");
+for(var i in data){
+$("#result").append("<li>"+data[i]+"</li>");
+}
+}
+});}
+</script>	
 </html>
