--- a/johnnywallet/www/index.html
+++ b/johnnywallet/www/index.html
@@ -35,7 +35,7 @@ $.ajax({
 url:'http://www.johnnywallet.com/api/phone/test.php',
 type:'POST',
 data:term,
-dataType:'jsonp',
+dataType:'json',
 error:function(jqXHR,text_status,strError){
 alert("no connection");},
 timeout:60000,
